add: GC bug to FAQ + note abt licensing; fix: FAQ re-format